# git-python

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  internals.md
scripts/: demo_dag.py  setup_demo.py
src/api/: main.py  schemas.py  service.py
src/dag/: builder.py  models.py  refs.py
src/git_objects/: models.py  parser.py
src/ui/: .env.example  package-lock.json  package.json
src/ui/src/: App.jsx  config.js  index.css
src/ui/src/components/: GraphView.jsx  ObjectView.jsx
tests/: test_api.py  test_dag.py  test_git.py  test_objects.py  test_refs.py
